Fixed font layout shift

--- a/public/styles/font.css
+++ b/public/styles/font.css
@@ -1,83 +1,95 @@
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Thin.ttf');
+    src: url('/fonts/Roboto-Thin.woff2');
     font-style: normal;
     font-weight: 100;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Light.ttf');
+    src: url('/fonts/Roboto-Light.woff2');
     font-style: normal;
     font-weight: 300;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Regular.ttf');
+    src: url('/fonts/Roboto-Regular.woff2');
     font-style: normal;
     font-weight: 400;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Medium.ttf');
+    src: url('/fonts/Roboto-Medium.woff2');
     font-style: normal;
     font-weight: 500;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Bold.ttf');
+    src: url('/fonts/Roboto-Bold.woff2');
     font-style: normal;
     font-weight: 700;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Black.ttf');
+    src: url('/fonts/Roboto-Black.woff2');
     font-style: normal;
-    font-weight: 900
+    font-weight: 900;
+     font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-ThinItalic.ttf');
+    src: url('/fonts/Roboto-ThinItalic.woff2');
     font-style: italic;
     font-weight: 100;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-LightItalic.ttf');
+    src: url('/fonts/Roboto-LightItalic.woff2');
     font-style: italic;
     font-weight: 300;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-Italic.ttf');
+    src: url('/fonts/Roboto-Italic.woff2');
     font-style: italic;
     font-weight: 400;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-MediumItalic.ttf');
+    src: url('/fonts/Roboto-MediumItalic.woff2');
     font-style: italic;
     font-weight: 500;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-BoldItalic.ttf');
+    src: url('/fonts/Roboto-BoldItalic.woff2');
     font-style: italic;
     font-weight: 700;
+    font-display: block;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/fonts/Roboto-BlackItalic.ttf');
+    src: url('/fonts/Roboto-BlackItalic.woff2');
     font-style: italic;
-    font-weight: 900
+    font-weight: 900;
+    font-display: block;
 }
